--- a/index.html
+++ b/index.html
@@ -401,13 +401,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-outreach">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/outreach/soapbox.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 2</h4>
+                <h4>Soapbox Science Lisbon - 2021</h4>
                 <p>Science Outreach</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/outreach/soapbox.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom Image"><i class="bx bx-plus"></i></a>
+                  <a href="outreach-details_Soapbox2021.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Science Outreach Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -441,6 +441,20 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-outreach">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/outreach/cartasciencia.JPG" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Cartas com Ciência - 2021</h4>
+                <p>Science Outreach</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/outreach/cartasciencia.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom Image"><i class="bx bx-plus"></i></a>
+                  <a href="outreach-details_CartasCiencia2021.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Science Outreach Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-meeting">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/meetings/FEN2021.jpg" class="img-fluid" alt="">
@@ -457,13 +471,41 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-outreach">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/outreach/90segundosciencia.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 1</h4>
+                <h4>90 segundos de ciência - 2020</h4>
                 <p>Science Outreach</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/outreach/90segundosciencia.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom Image"><i class="bx bx-plus"></i></a>
+                  <a href="outreach-details_90secCiencia2020.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Science Outreach Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-outreach">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/outreach/pubhd2019.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>PubhD Coimbra - 2019</h4>
+                <p>Science Outreach</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/outreach/pubhd2019.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom Image"><i class="bx bx-plus"></i></a>
+                  <a href="outreach-details_Pubhd2019.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Science Outreach Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-outreach">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/outreach/NEI2019.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>European Researchers' Night - 2019</h4>
+                <p>Science Outreach</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/outreach/NEI2019.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom Image"><i class="bx bx-plus"></i></a>
+                  <a href="outreach-details_EuropeanResearcher2019.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Science Outreach Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -562,20 +604,6 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/publications/revistapt2015.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom Image"><i class="bx bx-plus"></i></a>
                   <a href="publication-details_RPP2015.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Publication Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-outreach">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Card 3</h4>
-                <p>Science Outreach</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
