outreach detail spacing

--- a/outreach-details_CartasCiencia2021.html
+++ b/outreach-details_CartasCiencia2021.html
@@ -39,7 +39,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
+          <div class="col-lg-6">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
@@ -52,7 +52,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-6">
             <div class="portfolio-info">
               <h3>Science Outreach information</h3>
               <ul>
@@ -61,6 +61,11 @@
                 <li><strong>Link</strong>: <a href="https://www.cartascomciencia.org/en">https://www.cartascomciencia.org/en</a></li>
               </ul>
             </div>
+          </div>
+        </div>  
+
+        <div class="row gy-4">
+          <div class="col-lg-12"></div>
             <div class="portfolio-description">
               <h2>Description:</h2>
               <p>
