--- a/outreach-details_90secCiencia2020.html
+++ b/outreach-details_90secCiencia2020.html
@@ -67,7 +67,7 @@
         <div class="row gy-4">
           <div class="col-lg-12"></div>
             <div class="portfolio-description">
-              <h2>Abstract:</h2>
+              <h2>Description:</h2>
               <p>
                 "90 segundos de ciência" is a collaborative project between NOVA University Lisbon and Antena 1, a prominent Portuguese national radio channel. The primary objective of this initiative is to provide a platform for Portuguese scientists to succinctly share their research within the span of just 90 seconds. In 2020, I had the privilege of being interviewed on this radio program, affording me the opportunity to present and promote my PhD project and its results through a national media outlet.
               </p>
