--- a/outreach-details_Pubhd2019.html
+++ b/outreach-details_Pubhd2019.html
@@ -72,7 +72,7 @@
                 PubhD Coimbra is a monthly event in which three PhD students present their research projects in an informal setting. In the May 2019 edition, I had the opportunity to present my work on visual object processing to an audience with diverse academic backgrounds. This led to an engaging and enthusiastic discussion about the brain and visual perception.
               </p>
               <h2>Session:</h2>
-              <video>
+              <video controls>
                 <source src="assets/img/portfolio/outreach/pubhd_movie.mp4" type="video/mp4">
               </video>
             </div>
