--- a/outreach-details_90secCiencia2020.html
+++ b/outreach-details_90secCiencia2020.html
@@ -58,7 +58,7 @@
               <ul>
                 <li><strong>Title</strong>: 90 segundos de ciência </li>
                 <li><strong>Date</strong>: July, 2020</li>
-                <li><strong>Link</strong>: <a href="https://www.90segundosdeciencia.pt/episodes/ep-895-lenia-amaral/">https://www.90segundosdeciencia.pt/episodes/ep-895-lenia-amaral/</a></li>
+                <li><strong>Link</strong>: <a href="https://www.90segundosdeciencia.pt/episodes/ep-895-lenia-amaral/" target="_blank">https://www.90segundosdeciencia.pt/episodes/ep-895-lenia-amaral/</a></li>
               </ul>
             </div>
           </div>
