--- a/outreach-details_CartasCiencia2021.html
+++ b/outreach-details_CartasCiencia2021.html
@@ -58,7 +58,7 @@
               <ul>
                 <li><strong>Title</strong>: Cartas com Ciência</li>
                 <li><strong>Date</strong>: September, 2020 - June, 2021</li>
-                <li><strong>Link</strong>: <a href="https://www.cartascomciencia.org/en">https://www.cartascomciencia.org/en</a></li>
+                <li><strong>Link</strong>: <a href="https://www.cartascomciencia.org/en" target="_blank">https://www.cartascomciencia.org/en</a></li>
               </ul>
             </div>
           </div>
