--- a/outreach-details_EuropeanResearcher2019.html
+++ b/outreach-details_EuropeanResearcher2019.html
@@ -58,7 +58,7 @@
               <ul>
                 <li><strong>Title</strong>: European Researchers' Night </li>
                 <li><strong>Publication date</strong>: September, 2019</li>
-                <li><strong>Link</strong>: <a href="https://proactionlab.fpce.uc.pt/en/news-entry/several-people-had-a-date-with-our-neuroscientists-ern-2019-participation-">www.example.com</a></li>
+                <li><strong>Link</strong>: <a href="https://proactionlab.fpce.uc.pt/en/news-entry/several-people-had-a-date-with-our-neuroscientists-ern-2019-participation-" target="_blank">https://proactionlab.fpce.uc.pt/en/news-entry/several-people-had-a-date-with-our-neuroscientists-ern-2019-participation-</a></li>
               </ul>
             </div>
           </div>
