--- a/outreach-details_Pubhd2019.html
+++ b/outreach-details_Pubhd2019.html
@@ -58,7 +58,7 @@
               <ul>
                 <li><strong>Title</strong>: PubhD Coimbra</li>
                 <li><strong>Publication date</strong>: May, 2019</li>
-                <li><strong>Link</strong>: <a href="https://www.facebook.com/PubhDCoimbra/">https://www.facebook.com/PubhDCoimbra/</a></li>
+                <li><strong>Link</strong>: <a href="https://www.facebook.com/PubhDCoimbra/" target="_blank">https://www.facebook.com/PubhDCoimbra/</a></li>
               </ul>
             </div>
           </div>
