--- a/meetings-details_ExperimentalPsychology2021.html
+++ b/meetings-details_ExperimentalPsychology2021.html
@@ -39,7 +39,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
+          <div class="col-lg-6">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
@@ -52,7 +52,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-6">
             <div class="portfolio-info">
               <h3>Paper information</h3>
               <ul>
@@ -62,6 +62,11 @@
                 <li><strong>Conference/Meeting</strong>: 15th Annual meeting of the Portuguese Association for Experimental Psychology. Online meeting</li>
               </ul>
             </div>
+          </div>
+        </div>  
+
+        <div class="row gy-4">
+          <div class="col-lg-12"></div>
             <div class="portfolio-description">
               <h2>Abstract:</h2>
               <p>
