add papers and meetings

--- a/index.html
+++ b/index.html
@@ -361,6 +361,48 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-publication">
             <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/publications/HBM2023.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Human Brain Mapping - 2023</h4>
+                <p>Publication</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/publications/HBM2023.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom Image"><i class="bx bx-plus"></i></a>
+                  <a href="publication-details_HBM2023.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Publication Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-meeting">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/meetings/SFN2023.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>SFN Meeting - 2023</h4>
+                <p>Scientific Meeting</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/meetings/SFN2023.pngß" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="meetings-details_SFN2023.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-publication">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/publications/SciRep2023.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Scientific Reports - 2023</h4>
+                <p>Publication</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/publications/SciRep2023.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom Image"><i class="bx bx-plus"></i></a>
+                  <a href="publication-details_SciRep2023.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Publication Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-publication">
+            <div class="portfolio-wrap">
               <img src="assets/img/portfolio/publications/GeroScience2023.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>GeroScience - 2023</h4>
