--- a/meetings-details_SFN2023.html
+++ b/meetings-details_SFN2023.html
@@ -39,12 +39,12 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-6">
+          <div class="col-lg-8">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/meetings/APPE2022.JPG" alt="">
+                  <img src="assets/img/portfolio/meetings/SFN2023.png" alt="">
                 </div>
 
               </div>
@@ -52,25 +52,20 @@
             </div>
           </div>
 
-          <div class="col-lg-6">
+          <div class="col-lg-4">
             <div class="portfolio-info">
               <h3>Paper information</h3>
               <ul>
-                <li><strong>Title</strong>: Using neuromodulation to dissociate overlapping networks</li>
-                <li><strong>Authors</strong>: Amaral L., Donato, R., Valério, D., Caparelli-Dáquer, E., Almeida, J., & Bergström, F.</li>
-                <li><strong>Presentation year</strong>: 2022</li>
-                <li><strong>Conference/Meeting</strong>: International APPE-SEPEX Meeting. University of Algarve, Portugal</li>
+                <li><strong>Title</strong>: The idiosyncratic nature of neuroplasticity: investigating the impact of congenital deafness on individual brain organization</li>
+                <li><strong>Authors</strong>: Amaral L., Wang X., Bi Y., Striem-Amit E.</li>
+                <li><strong>Presentation year</strong>: 2023</li>
+                <li><strong>Conference/Meeting</strong>: 
               </ul>
             </div>
-          </div>
-        </div>  
-
-        <div class="row gy-4">
-          <div class="col-lg-12"></div>
             <div class="portfolio-description">
               <h2>Abstract:</h2>
               <p>
-                In this study, we focused on left lateral occipitotemporal cortex (LOTC), a region that responds both to hand and tool stimuli. Applying transcranial direct current stimulation (tDCS) to left LOTC, while participants performed either a hand- or tool-related training task, we would be able to specifically target the trained category, and thereby dissociate the overlapping neural processing. Then we also wanted to determine if these effects were limited to the target area or if they spread to other brain areas that are functionally related. After each combined tDCS and training session, participants viewed images of tools, hands, and animals, in an fMRI scanner. Using multivoxel pattern analysis, we found that tDCS on LOTC improved the classification accuracy between tools vs. animals, but only when combined with a tool training task (not a hand training task). Unexpectedly, tDCS on LOTC also enhanced classification accuracy for hands vs. animals when paired with a tool, but not hand training task. The observed effects were found locally and distally in the tool and hand networks – replicating previous findings – but only partially disentangling them.
+                
               </p>
             </div>
           </div>
