--- a/publication-details_SciRep2023.html
+++ b/publication-details_SciRep2023.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Personal Bootstrap Template</title>
+  <title>Publication Details</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -31,7 +31,7 @@
 
 <body>
 
-  <main id="main">
+  <main id="main_detail">
 
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
@@ -44,7 +44,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/meetings/APPE2022.JPG" alt="">
+                  <img src="assets/img/portfolio/publications/SciRep2023.png" alt="">
                 </div>
 
               </div>
@@ -54,12 +54,13 @@
 
           <div class="col-lg-6">
             <div class="portfolio-info">
-              <h3>Paper information</h3>
+              <h3>Publication information</h3>
               <ul>
-                <li><strong>Title</strong>: Using neuromodulation to dissociate overlapping networks</li>
-                <li><strong>Authors</strong>: Amaral L., Donato, R., Valério, D., Caparelli-Dáquer, E., Almeida, J., & Bergström, F.</li>
-                <li><strong>Presentation year</strong>: 2022</li>
-                <li><strong>Conference/Meeting</strong>: International APPE-SEPEX Meeting. University of Algarve, Portugal</li>
+                <li><strong>Title</strong>: Temporal differences and commonalities between hand and tool neural processing</li>
+                <li><strong>Authors</strong>: L. Amaral, G. Besson, E. Caparelli-Dáquer, F. Bergström & J. Almeida</li>
+                <li><strong>Publication year</strong>: 2023</li>
+                <li><strong>Journal</strong>: Scientific Reports</li>
+                <li><strong>DOI</strong>: <a href="https://doi.org/10.1038/s41598-023-48180-8 " target="_blank" rel="noopener noreferrer">https://doi.org/10.1038/s41598-023-48180-8 </a></li>
               </ul>
             </div>
           </div>
@@ -70,7 +71,11 @@
             <div class="portfolio-description">
               <h2>Abstract:</h2>
               <p>
-                In this study, we focused on left lateral occipitotemporal cortex (LOTC), a region that responds both to hand and tool stimuli. Applying transcranial direct current stimulation (tDCS) to left LOTC, while participants performed either a hand- or tool-related training task, we would be able to specifically target the trained category, and thereby dissociate the overlapping neural processing. Then we also wanted to determine if these effects were limited to the target area or if they spread to other brain areas that are functionally related. After each combined tDCS and training session, participants viewed images of tools, hands, and animals, in an fMRI scanner. Using multivoxel pattern analysis, we found that tDCS on LOTC improved the classification accuracy between tools vs. animals, but only when combined with a tool training task (not a hand training task). Unexpectedly, tDCS on LOTC also enhanced classification accuracy for hands vs. animals when paired with a tool, but not hand training task. The observed effects were found locally and distally in the tool and hand networks – replicating previous findings – but only partially disentangling them.
+                Object recognition is a complex cognitive process that relies on how the brain organizes object-related information. While spatial principles have been extensively studied, less studied temporal dynamics may also offer valuable insights into this process, 
+                particularly when neural processing overlaps for different categories, as it is the case of the categories of hands and tools. Here we focus on the differences and/or similarities between the time-courses of hand and tool processing under electroencephalography (EEG). 
+                Using multivariate pattern analysis, we compared, for different time points, classification accuracy for images of hands or tools when compared to images of animals. We show that for particular time intervals (~136-156 ms and ~252-328 ms), classification accuracy for hands and for tools differs. 
+                Furthermore, we show that classifiers trained to differentiate between tools and animals generalize their learning to classification of hand stimuli between ~260-320 ms and ~376-500 ms after stimulus onset. 
+                Classifiers trained to distinguish between hands and animals, on the other hand, were able to extend their learning to the classification of tools at ~150 ms. These findings suggest variations in semantic features and domain-specific differences between the two categories, with later-stage similarities potentially related to shared action processing for hands and tools.
               </p>
             </div>
           </div>
