--- a/publication-details_HBM2023.html
+++ b/publication-details_HBM2023.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Personal Bootstrap Template</title>
+  <title>Publication Details</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -31,7 +31,7 @@
 
 <body>
 
-  <main id="main">
+  <main id="main_detail">
 
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
@@ -44,7 +44,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/meetings/APPE2022.JPG" alt="">
+                  <img src="assets/img/portfolio/publications/HBM2023.png" alt="">
                 </div>
 
               </div>
@@ -54,12 +54,13 @@
 
           <div class="col-lg-6">
             <div class="portfolio-info">
-              <h3>Paper information</h3>
+              <h3>Publication information</h3>
               <ul>
-                <li><strong>Title</strong>: Using neuromodulation to dissociate overlapping networks</li>
-                <li><strong>Authors</strong>: Amaral L., Donato, R., Valério, D., Caparelli-Dáquer, E., Almeida, J., & Bergström, F.</li>
-                <li><strong>Presentation year</strong>: 2022</li>
-                <li><strong>Conference/Meeting</strong>: International APPE-SEPEX Meeting. University of Algarve, Portugal</li>
+                <li><strong>Title</strong>: Neuroplastic changes in functional wiring in sensory cortices of the congenitally deaf: A network analysis</li>
+                <li><strong>Authors</strong>: Michaela Ruttorf, Zohar Tal, Lénia Amaral, Fang Fang, Yanchao Bi, Jorge Almeida</li>
+                <li><strong>Publication year</strong>: 2023</li>
+                <li><strong>Journal</strong>: Human Brain Mapping</li>
+                <li><strong>DOI</strong>: <a href="https://doi.org/10.1002/hbm.26530" target="_blank" rel="noopener noreferrer">https://doi.org/10.1002/hbm.26530</a></li>
               </ul>
             </div>
           </div>
@@ -70,7 +71,14 @@
             <div class="portfolio-description">
               <h2>Abstract:</h2>
               <p>
-                In this study, we focused on left lateral occipitotemporal cortex (LOTC), a region that responds both to hand and tool stimuli. Applying transcranial direct current stimulation (tDCS) to left LOTC, while participants performed either a hand- or tool-related training task, we would be able to specifically target the trained category, and thereby dissociate the overlapping neural processing. Then we also wanted to determine if these effects were limited to the target area or if they spread to other brain areas that are functionally related. After each combined tDCS and training session, participants viewed images of tools, hands, and animals, in an fMRI scanner. Using multivoxel pattern analysis, we found that tDCS on LOTC improved the classification accuracy between tools vs. animals, but only when combined with a tool training task (not a hand training task). Unexpectedly, tDCS on LOTC also enhanced classification accuracy for hands vs. animals when paired with a tool, but not hand training task. The observed effects were found locally and distally in the tool and hand networks – replicating previous findings – but only partially disentangling them.
+                Congenital sensory deprivation induces significant changes in the structural and functional organisation of the brain. 
+                These are well-characterised by cross-modal plasticity, in which deprived cortical areas are recruited to process information from non-affected sensory modalities, as well as by other neuroplastic alterations within regions dedicated to the remaining senses. 
+                Here, we analysed visual and auditory networks of congenitally deaf and hearing individuals during different visual tasks to assess changes in network community structure and connectivity patterns due to congenital deafness. 
+                In the hearing group, the nodes are clearly divided into three communities (visual, auditory and subcortical), whereas in the deaf group a fourth community consisting mainly of bilateral superior temporal sulcus and temporo-insular regions is present. 
+                Perhaps more importantly, the right lateral geniculate body, as well as bilateral thalamus and pulvinar joined the auditory community of the deaf. 
+                Moreover, there is stronger connectivity between bilateral thalamic and pulvinar and auditory areas in the deaf group, when compared to the hearing group. 
+                No differences were found in the number of connections of these nodes to visual areas. Our findings reveal substantial neuroplastic changes occurring within the auditory and visual networks caused by deafness, emphasising the dynamic nature of the sensory systems in response to congenital deafness. 
+                Specifically, these results indicate that in the deaf but not the hearing group, subcortical thalamic nuclei are highly connected to auditory areas during processing of visual information, suggesting that these relay areas may be responsible for rerouting visual information to the auditory cortex under congenital deafness.
               </p>
             </div>
           </div>
