change sfn dates; add sfn abstract; chanfe meeting detail html title

--- a/index.html
+++ b/index.html
@@ -375,13 +375,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-meeting">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/meetings/SFN2023.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/meetings/SFN2024.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>SFN Meeting - 2023</h4>
+                <h4>SfN Meeting - 2024</h4>
                 <p>Scientific Meeting</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/meetings/SFN2023.pngß" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="meetings-details_SFN2023.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/meetings/SFN2024.pngß" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="meetings-details_SFN2024.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
