--- a/meetings-details_SFN2024.html
+++ b/meetings-details_SFN2024.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Personal Bootstrap Template</title>
+  <title>Meeting Details</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -44,7 +44,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/meetings/SFN2023.png" alt="">
+                  <img src="assets/img/portfolio/meetings/SFN2024.png" alt="">
                 </div>
 
               </div>
@@ -58,14 +58,21 @@
               <ul>
                 <li><strong>Title</strong>: The idiosyncratic nature of neuroplasticity: investigating the impact of congenital deafness on individual brain organization</li>
                 <li><strong>Authors</strong>: Amaral L., Wang X., Bi Y., Striem-Amit E.</li>
-                <li><strong>Presentation year</strong>: 2023</li>
-                <li><strong>Conference/Meeting</strong>: 
+                <li><strong>Presentation year</strong>: 2024</li>
+                <li><strong>Conference/Meeting</strong>: SfN Meeting 2024
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Abstract:</h2>
               <p>
-                
+                The principle of "all different, all equal" presents a challenge in cognitive neuroscience, where studies have consistently demonstrated a universal organization of the human brain. 
+                However, these investigations have been limited in capturing individual variations in neural organization. Individual differences play a crucial role in shaping certain neural patterns, with environmental factors and personal experiences contributing significantly to observed variability. 
+                In this study, we aimed to examine the role of sensory experience in functional connectivity (FC) patterns, specifically focusing on FC from the deprived primary auditory cortex of congenitally deaf individuals (N = 39) compared to a hearing control group (N = 33). 
+                Our findings demonstrate that the absence of shared auditory experience leads to increased variability in FC patterns across deaf individuals, in contrast to the more consistent patterns observed in the hearing group. 
+                To investigate the specific effects of sign language deprivation and determine whether the variations in brain connectivity are influenced by auditory deprivation or language deprivation, common among deaf children of hearing parents, we also examined the FC patterns focusing on a subset of the deaf group consisting of individuals who are native signers. 
+                Our analysis revealed comparable patterns of individual variability in FC within this subgroup, when compared to a broader analysis that encompassed both native and nonnative signers. This finding provides evidence that the individual differences in FC of the auditory cortex in deafness primarily arise from auditory deprivation. 
+                Collectively, these results highlight the interplay between brain plasticity and individual variability, showcasing the varied manifestation of reorganization across individuals. Furthermore, our study elucidates the influence of sensory experiences in establishing consistency in brain organization. 
+                These findings have important implications for the development of individualized medicine for hearing loss, such as the design of sensory aids and the utilization of restoration techniques.
               </p>
             </div>
           </div>
