--- a/meetings-details_SFN2024.html
+++ b/meetings-details_SFN2024.html
@@ -62,6 +62,11 @@
                 <li><strong>Conference/Meeting</strong>: SfN Meeting 2024
               </ul>
             </div>
+          </div>
+        </div>  
+
+        <div class="row gy-4">
+          <div class="col-lg-12"></div>
             <div class="portfolio-description">
               <h2>Abstract:</h2>
               <p>
