--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Lénia Amaral</h1>
-      <p>I'm a <span class="typed" data-typed-items="Cognitive Neuroscientist, Woman in Science, Science Comunicator"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Cognitive Neuroscientist, Woman in Science, Science Communicator"></span></p>
       <div class="social-links">
         <a href="https://scholar.google.com/citations?user=Ze-s-wEAAAAJ&hl=en" class="googlescholar" title="Google Scholar" target="_blank" rel="noopener noreferrer"><i class="ai ai-google-scholar"></i></a>
         <a href="https://twitter.com/AmaralLenia" class="twitter" title="Twitter" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
