--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <h3>Hey there, I'm Lénia Amaral!</h3>
           <h4>Scientist by Day, Plant Enthusiast by Heart, Foodie by Passion, and Traveler by Soul</h4>
           <p>
-            Welcome to my academic corner, where I'll take you through my scientific journey, discoveries, and a sneak peek into my intellectual interests. Let's dive into the world of academia and beyond! 
+            My research focuses on brain organization and neuroplasticity. I have been studying the neural organization of conceptual knowledge and how network activity influences this neural processing. I am also interested in exploring how neuroplasticity shapes cognitive systems (e.g., through deafness, blindness, or aging). To address these issues, I employ a multimodal strategy that includes fMRI, EEG, neuromodulation, neuropsychological and behavioral data. 
             <i class='bx bx-leaf' ></i>
             <i class='bx bx-bowl-hot'></i>
             <i class='bx bxs-plane-alt' ></i>
@@ -100,13 +100,13 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>PhD</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Washington DC, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Coimbra, PortugalA</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Position:</strong> <span>Postdoctoral Researcher</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>Georgetown University</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>University of Coimbra</span></li>
                 </ul>
               </div>
             </div>
@@ -130,7 +130,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="12" data-purecounter-duration="1" class="purecounter"></span>
               <p>Publications</p>
             </div>
           </div>
@@ -138,7 +138,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
               <i class="bi bi-blockquote-left"></i>
-              <span data-purecounter-start="0" data-purecounter-end="99" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="121" data-purecounter-duration="1" class="purecounter"></span>
               <p>Citations</p>
             </div>
           </div>
@@ -146,7 +146,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-graph-up"></i>
-              <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="purecounter"></span>
               <p>H-Index</p>
             </div>
           </div>
@@ -154,7 +154,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-award"></i>
-              <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
               <p>Awards</p>
             </div>
           </div>
@@ -262,8 +262,8 @@
           <p>
             I started my academic journey at the University of Minho in Portugal, earning both my bachelor's and master's degrees. 
             Later, I became a research assistant at the University of Coimbra, where I decided to pursue my PhD. 
-            And now, I'm a postdoc at Georgetown University in the USA. 
-            Join me as I continue to explore the world of neuroscience! 
+            In 2022, I moved to the USA to be a postdoc at Georgetown University in the USA. 
+            In the end of 2024, I returned to Portugal as an Invited Professor and Researcher at the University of Coimbra.
             <i class='bx bx-world' ></i>
             <i class='bx bx-brain' ></i>
             <i class='bx bx-book' ></i>
@@ -288,7 +288,7 @@
               <p>Faculty advisor: Dr. Óscar Gonçalves. Co-advisor: Dr. Jorge Almeida.</p>
             </div>
             <div class="resume-item">
-              <h4>BA in Psychological Sciences</h4>
+              <h4>BsC in Psychological Sciences</h4>
               <h5>2009 - 2012</h5>
               <p><em>School of Psychology, University of Minho, Braga, Portugal</em></p>
             </div>
@@ -298,7 +298,12 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Postdoctoral researcher</h4>
-              <h5>2022 - Present</h5>
+              <h5>2024 - Present</h5>
+              <p><em>Invited Professor and Researcher. Faculty of Psychology and Educational Sciences, University of Coimbra. Portugal</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Postdoctoral researcher</h4>
+              <h5>2022 - 2024</h5>
               <p><em>Postdoctoral researcher at the SAMP Lab under supervision of Dr. Ella Striem-Amit. Georgetown University Medical Center. Washington DC, USA</em></p>
               <!--<ul>
                 <li>O QUE ANDAS A FAZER AQUI?? Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
@@ -858,9 +863,8 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Georgetown University Medical Center</p>
-                <p>Department of Neuroscience</p>
-                <p>4000 Reservoir Road, NW Washington, DC 20007 USA</p>
+                <p>Faculdade de Psicologia e Ciências da Educação da Universidade de Coimbra, Edifício 2</p>
+                <p>Coimbra, Portugal</p>
               </div>
 
               <!--<div class="email">
@@ -880,7 +884,7 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0">
-
+<!--
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
@@ -903,7 +907,7 @@
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
-
+-->
           </div>
 
         </div>
